<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context="test.myapplication.MainActivity">
    <item
        android:id="@+id/add_history"
        android:orderInCategory="100"
        android:title="@string/add_period"
        app:showAsAction="never"/>

    <item
        android:id="@+id/statistics"
        android:orderInCategory="100"
        android:title="@string/statistics"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_line_chart"/>

    <item
        android:id="@+id/settings"
        android:orderInCategory="100"
        android:title="@string/settings"
        app:showAsAction="never"/>

    <item
        android:id="@+id/tutorial"
        android:orderInCategory="100"
        android:title="@string/tutorial"
        app:showAsAction="never"/>

    <item
        android:id="@+id/feedback"
        android:orderInCategory="100"
        android:title="@string/feedback"
        app:showAsAction="never"/>

    <item
        android:id="@+id/rate"
        android:orderInCategory="100"
        android:title="@string/rate"
        app:showAsAction="never"/>

</menu>